[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "debbugs"
version = "0.1.0"
description = "Client for debbugs"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
debbugs = "debbugs.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-icdiff"
]

[tool.setuptools]
package-dir = {"" = "src"}
