[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "debbugs"
version = "0.1.0"
description = "Client for debbugs"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "zeep~=4.1",
]

[project.scripts]
debbugs = "debbugs.cli:main"

[project.optional-dependencies]
dev = [
    "pytest~=7.1",
    "pytest-icdiff~=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
